--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+clap = "4.5.4"
+dotenv = "0.15.0"
 serde = "1.0.202"
 serde_json = "1.0.117"
 thirtyfour = "0.32.0"
